Set fixed width for groups section of ProjectConfigurationComponent & prevent overflow

--- a/app/components/configuration/project-configuration.scss
+++ b/app/components/configuration/project-configuration.scss
@@ -38,6 +38,23 @@
 
     .groups {
         padding-top: 1rem;
+        padding-left: 15px;
+        width: 240px;
+
+        ul {
+            width: 100%;
+
+            .nav {
+                width: 100%;
+
+                .group-button {
+                    width: 100%;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
+                    white-space: nowrap;
+                }
+            }
+        }
     }
 
     .content {
